--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,4 +1,9 @@
 location PATHTOCHANGE {
+
+    if ($scheme = http) {
+      rewrite ^ https://$server_name$request_uri? permanent;
+    }
+
     proxy_http_version 1.1;
     proxy_pass_header Server;
     proxy_pass HOSTTOCHANGE;
@@ -8,7 +13,7 @@ location PATHTOCHANGE {
     proxy_set_header X-Scheme $scheme;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
-    
+
     # Include SSOWAT user panel.
     include conf.d/yunohost_panel.conf.inc;
     more_clear_input_headers 'Accept-Encoding';
